<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fogok.simplecalculator.MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:focusable="true"
        android:focusableInTouchMode="true">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputExpression"
            android:hint="@string/inputExpression"
            android:inputType="number|numberDecimal"
            android:text="@string/test"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:id="@+id/plusBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:id="@+id/minusBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:id="@+id/multiplyBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:id="@+id/divideBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:id="@+id/percentBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:id="@+id/dotBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parenthessOpen"
                android:id="@+id/parenthessOpenBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parenthessClose"
                android:id="@+id/parenthessCloseBtn"
                android:layout_weight="1"
                android:onClick="addCharToExpressionEditText"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/button"
            android:onClick="calculate"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"

                android:id="@+id/answerTextView"/>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>
